@@ -12,6 +12,7 @@ using MonoDevelop.Gui;
 using MonoDevelop.TextEditor;
 
 using MonoDevelop.SourceEditor.Gui;
+using SourceEditor = MonoDevelop.SourceEditor.Gui.SourceEditor;
 
 namespace MonoDevelop.TextEditor.Document
 {
